--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Roboto Mono", monospace;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
@@ -18,9 +10,11 @@ x::backdrop {
 }
 
 :root {
+  --background: #27296d;
+  --primary: #5e63b6;
   --purple: #885df1;
   --lilac: #f5f2fe;
-  --pink: #f65282;
+  --pink: #ed5971;
   --light-pink: #ffdde8;
   --yellow: #fbbc07;
   --green: #2ecc71;
@@ -33,4 +27,12 @@ x::backdrop {
   --hamburger-margin: 6em;
   --animation-timing: 200ms ease-in-out;
   --hamburger-height: calc(var(--bar-height) * 3 + var(--hamburger-gap) * 2);
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Inconsolata", monospace;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
